fixing wonky spacing on news view at 290 px

--- a/sites/all/themes/custom/cchi_v2/sass/custom.sass
+++ b/sites/all/themes/custom/cchi_v2/sass/custom.sass
@@ -927,14 +927,21 @@ div.label-inline
   .view-id-news
     img
       width: 100%
+      margin-top: 0.5rem
+      margin-bottom: 1.5rem
+    div.group-left.columns.medium-3
+      margin-top: 3.5rem
     .medium-9
+      margin-top: -1.9rem
       .field
         padding-left: 0rem
         padding-right: 0rem
     
-  //events
+    //events
   .view-id-events
     margin-top: 2rem
+    
+      
     .medium-9
       padding-top: 0
       margin-top: -1rem
